Reorganize ftnplnl page & add info for FTN::Nodelist 1.07.
Reorganize the ftnplnl page, createing separate sections for
the FTN::Nodelist and FTN::NL modules.  Add information for
the FTN::Nodelist v1.07 release.

--- a/ftnplnl.html
+++ b/ftnplnl.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <title>FTN:Nodelist Perl Module</title>
+     <title>FTN Nodelist Perl Modules</title>
      <meta name="author" content="Robert James Clay">
      <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
      <meta http-equiv="KEYWORDS" CONTENT="Perl, Modules, Fidonet, FTN, BBS">
@@ -14,7 +14,7 @@
       <div class="Header">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
-          FTN::Nodelist Perl Module
+          FTN Nodelist Perl Modules
         </div>
       </div>
       <div class="subHeader">
@@ -48,13 +48,20 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h2>FTN::Nodelist</h2>
+        <p>Fidonet/FTN Nodelist related Perl Modules</p>
 		    
-        	<ul>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  
-        	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/">FTN-Nodelist-1.05</a> - FTN::Nodelist v1.05, by Serguel Trouchelle  </li>
-        	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle  (part of FTN::Nodelist v1.05) </li>
-        	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl/modules/FTN/Nodelist/?pathrev=MAIN">FTN-Nodelist-0.01</a>&nbsp;- FTN::Nodelist v0.01, a skeletal version from 2001-2002 by&nbsp;<a href="http://sourceforge.net/users/jame">Robert James Clay</a>&nbsp;(see CVS Repository)</li>
-		</ul>
+	    <ul><b>FTN::Nodelist</b>
+		<li>Object Oriented Perl module for accessing FTN nodelists, by Serguel Trouchelle.</li>  
+		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.07/">FTN-Nodelist-1.07</a> - FTN::Nodelist v1.07 (2007/02/28)</li>
+    		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.06/">FTN-Nodelist-1.06</a> - FTN::Nodelist v1.06 (2007/02/04)</li>
+    		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/">FTN-Nodelist-1.05</a> - FTN::Nodelist v1.05 (2005/09/29)</li>
+        	<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle (part of FTN::Nodelist) </li>
+	    </ul>
+
+	    <ul><b>FTN::NL</b> - ftnplnl
+		<li>Procedural Perl module for reading FTN nodelists.  
+        	<li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl/modules/FTN/Nodelist/?pathrev=MAIN">FTN-Nodelist-0.01</a>&nbsp;- FTN::Nodelist v0.01, a skeletal version from 2001-2002 by&nbsp;<a href="http://sourceforge.net/users/jame">Robert James Clay</a>&nbsp;(see CVS Repository)</li>
+	    </ul>
 
 
 
