Add note about SynchroNet to applications page.

--- a/applications.html
+++ b/applications.html
@@ -60,6 +60,11 @@
              use Perl.</li>
 	 </ul>
 
+         <ul>SynchroNet (<a href="http://www.synchro.net">www.synchro.net</a>)
+          <li>SynchroNet (SBBS) is a BBS program that is available for mulitple platforms, and while it has it's own scripting language (Javascript or Baja)
+           it can also be set up to use Perl.</li>
+	 </ul>
+
         </dl>
 
         </div>
@@ -76,7 +81,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy;2006 Robert James Clay</font>
+	  <font size="-2">Copyright &copy;2010 Robert James Clay</font>
 	 </td></tr)
 	</table>
     </div>
