Reformat scripts page & update Nodelist section.
Reformat html in scripts page, and update the Nodelist
related section in the page.

--- a/scripts.html
+++ b/scripts.html
@@ -35,38 +35,37 @@
 
         <h2>Fidonet related Perl scripts</h2>
 
-			<ul>Nodelist
-          <li><b>nl2sql</b>:  nl2sql.pl v1.x   Standalone Perl script for loading the information into a fidonet/FTN nodelist MySQL database.</li>
-          <li><b>nl2db</b>:  nl2db.pl v0.x This version will use the (yet to be developed) FTN::Nodelist module to load the information in an FTN nodelist into a MySQL database.</li>
-			</ul>
+	    <ul>Nodelist
+        	<li><b>nl2db</b> - Perl scripts to load and manage the information in an FTN nodelist into a database supported by the Perl DBI module.</li>
+	    </ul>
 
-			<ul>Packet
-          <li><b>pkt2txt</b> - pkt2txt.pl - Perl script to read FTN packets & output text files for the included messages</li>
-          <li><b>pkt2html</b> - pkt2html.pl - Perl script to read FTN packets & output html files for the included messages</li>
-			</ul>
+	    <ul>Packet
+        	<li><b>pkt2txt</b> - pkt2txt.pl - Perl script to read FTN packets & output text files for the included messages</li>
+        	<li><b>pkt2html</b> - pkt2html.pl - Perl script to read FTN packets & output html files for the included messages</li>
+	    </ul>
         
-			<ul>SRIF
-          <li><b>srifpl</b> - srif.pl - Test script for an external file request processor using SRIF files.</li>
-			</ul>
+	    <ul>SRIF
+		<li><b>srifpl</b> - srif.pl - Test script for an external file request processor using SRIF files.</li>
+	    </ul>
   
-			<ul>BBS
-          <li><b>bbsdbpl</b> - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  </li>
-			</ul>
+	    <ul>BBS
+		<li><b>bbsdbpl</b> - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  </li>
+	    </ul>
   
-			<ul>BBBS
-          <li><b>mrtgbbbs</b> - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.</li>
-          <li><b>descadd</b> - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.</li>
-          <li><b>indexer</b> - indexer.pl - Perl script to generate web pages for bbbs file directories.</li>
-          <li><b>ticmsg</b> - ticmsg.pl - Perl script to sort & organize file lists for posting.</li>
-			</ul>
+	    <ul>BBBS
+		<li><b>mrtgbbbs</b> - mrtgbbbs.pl - Perl script for reading the mrtg info from the BBBS standard port.</li>
+		<li><b>descadd</b> - descadd.pl - Perl script to add File area descriptions from the FDN list into your BBBS filedirg.000 file.</li>
+		<li><b>indexer</b> - indexer.pl - Perl script to generate web pages for bbbs file directories.</li>
+		<li><b>ticmsg</b> - ticmsg.pl - Perl script to sort & organize file lists for posting.</li>
+	    </ul>
 
-			<ul>Husky Project
-          <li><b>hpt2sql</b> - Perl scripts for using an SQL database with the Fidonet/FTN compatible Fidonet Tosser/Scanner, HPT from the Husky project.  This version uses only the Perl hooks in HPT, standard Perl, & a MySQL database.</li>
-			</ul>
+	    <ul>Husky Project
+		<li><b>hpt2sql</b> - Perl scripts for using an SQL database with the Fidonet/FTN compatible Fidonet Tosser/Scanner, HPT from the Husky project.  This version uses only the Perl hooks in HPT, standard Perl, & a MySQL database.</li>
+	    </ul>
   
-			<ul><a href="http://maximus.sourceforge.net">Maximus </a> BBS
-          <li><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)</li>
-			</ul>
+	    <ul><a href="http://maximus.sourceforge.net">Maximus </a> BBS
+		<li><b>af4max</b> - Perl script which will produce a list of all files available for download from the file areas of a Maximus bulletin board system.  Runs under Linux, DOS, OS/2 and Windows. (GNU GPL)</li>
+	    </ul>
 
         </div>
       </div>
@@ -82,7 +81,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
+	  <font size="-2">Copyright &copy; 2010 Robert James Clay</font>
 	 </td></tr)
 	</table>
     </div>
