--- a/ftnpljam.html
+++ b/ftnpljam.html
@@ -48,10 +48,13 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h2>FTN::JAM</h2>
+        <p>JAM is a popular messagebase format for storeing Fidonet/FTN messages originally devised by Joaquim Homrighausen,
+           Andrew Milner, Mats Mirch, and Mats Wallin.  This is a Perl implementation of the <a href="http://jamlib.sourceforge.net">JAMLIB</a>
+    	    library, made available so that JAM messagebases can be conveniently be accessed from Perl scripts.<p>
         
 		<ul>ftnpljam - FTN::JAM - Perl module for processing JAM messagebases. 
-		    <li>(under development)</li>
+		    <li><a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-jam.git">GIT</a> code repository for module</li>
+		    <li>Originally based on the public domain Perl <a href="http://bitbucket.org/johanbilling/jampm/">JAM.pm</a> module by Johan Billing</li>
 		</ul>
 
 
