Add files, git, & cpan links to ftnpllog.html.

--- a/ftnpllog.html
+++ b/ftnpllog.html
@@ -50,8 +50,17 @@
 
         <h2>FTN::Log</h2>
 
-        	<ul>ftnpllog - FTN::Log - Perl module for FTN compatible Logging. 
-		    <li>FTN-Log v0.02</li>
+        	<ul>ftnpllog - Perl module for Fidonet/FTN compatible Logging. 
+
+		    <li>Archives are available in the ftn-log section of the project&nbsp;
+			<a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+
+		    <li>Browse the GIT code&nbsp;
+		    <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-log.git">repository</a>.</li>
+
+
+		    <li>FTN::Log at&nbsp;<a href="http://search.cpan.org/dist/FTN-Log/">CPAN</a></li>
+
 		</ul>
 		    
         </div>
