Add files, git, & cpan links to ftnplpkt.html.

--- a/ftnplpkt.html
+++ b/ftnplpkt.html
@@ -51,12 +51,21 @@
     	    <p>Fidonet packet related Perl Modules in the FTN namespace.</p>
 
     	    <ul><b>FTN::Packet</b> - ftnplpkt
-		<li>Perl module for reading/writing FTN packets.  </li>
-		<li>(to be developed)</li>
+		
+		<li>Perl module for reading or writing FTN packets.</li>
+
+		<li>Archives are available in the ftn-packet section of the project&nbsp;
+		    <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+
+		<li>Browse the GIT code&nbsp;
+		    <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-packet.git">repository</a>.</li>
+
+		<li>FTN::Packet at&nbsp;<a href="http://search.cpan.org/dist/FTN-Packet/">CPAN</a></li>
+
 	    </ul>
         
     	    <ul><b>FTN::Pkt</b>
-    		<li>Perl module for making FTN style packets.  Includes FTN::Msg and FTN::OS_features.</li>
+    		<li>A more object oriented Perl module for reading or writeing FTN style packets.  Includes FTN::Msg and FTN::OS_features.</li>
 		<li><a href="http://search.cpan.org/~keu/FTN-Pkt-1.02">FTN-Pkt-1.02</a> - FTN::Pkt v1.02, by Dmitry V. Kolvakh</li>
 	    </ul>
 
