Add FTN-Pkt section in ftnplpkt.html.

--- a/ftnplpkt.html
+++ b/ftnplpkt.html
@@ -66,7 +66,9 @@
         
     	    <ul><b>FTN::Pkt</b>
     		<li>A more object oriented Perl module for reading or writeing FTN style packets.  Includes FTN::Msg and FTN::OS_features.</li>
-		<li><a href="http://search.cpan.org/~keu/FTN-Pkt-1.02">FTN-Pkt-1.02</a> - FTN::Pkt v1.02, by Dmitry V. Kolvakh</li>
+
+		<li>FTN::Pkt at&nbsp;<a href="http://search.cpan.org/dist/FTN-Pkt/">CPAN</a> - Author, Dmitry V. Kolvakh</li>
+
 	    </ul>
 
         </div>
