Updated FTN::Database::Nodelist section in ftnplnl.html.

--- a/ftnplnl.html
+++ b/ftnplnl.html
@@ -50,7 +50,7 @@
 
         <p>Fidonet/FTN Nodelist related Perl Modules</p>
 		    
-	    <ul><b>FTN::Nodelist</b>
+	    <ul><b>FTN::Nodelist</b> <!-- - ftnplnl -->
 		<li>Object Oriented Perl module for accessing FTN nodelists, by Serguel Trouchelle.</li>  
 		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.07/">FTN-Nodelist-1.07</a> - FTN::Nodelist v1.07 (2007/02/28)</li>
     		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.06/">FTN-Nodelist-1.06</a> - FTN::Nodelist v1.06 (2007/02/04)</li>
@@ -58,12 +58,21 @@
         	<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle (part of FTN::Nodelist) </li>
 	    </ul>
 
-	    <ul><b>FTN::NL</b> - ftnplnl
-		<li>Procedural Perl module for reading FTN nodelists.  
-        	<li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl/modules/FTN/Nodelist/?pathrev=MAIN">FTN-Nodelist-0.01</a>&nbsp;- FTN::Nodelist v0.01, a skeletal version from 2001-2002 by&nbsp;<a href="http://sourceforge.net/users/jame">Robert James Clay</a>&nbsp;(see CVS Repository)</li>
+	    <ul><b>FTN::Database::Nodelist</b>
+
+		<li>Perl module containing common nodelist related subroutines for Fidonet/FTN Nodelist related
+		    processing on a Nodelist table in an SQL Database. The SQL database engine is one for which
+		    a DBD module exists, defaulting to SQLite. Part of the FTN::Database distribution.</li>
+
+		<li>Archives are available here in the ftn-database section of the project
+			<a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+
+		<li>Browse the GIT code&nbsp;
+		    <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-database.git">repository</a>.</li>
+
+		<li>FTN::Database at&nbsp;<a href="http://search.cpan.org/dist/FTN-Database/">CPAN</a>.</li>
+
 	    </ul>
-
-
 
         </div>
       </div>
