Add files & cpan links to ftnpljam.html.

--- a/ftnpljam.html
+++ b/ftnpljam.html
@@ -50,12 +50,20 @@
 
         <p>JAM is a popular messagebase format for storeing Fidonet/FTN messages originally devised by Joaquim Homrighausen,
            Andrew Milner, Mats Mirch, and Mats Wallin.  This is a Perl implementation of the <a href="http://jamlib.sourceforge.net">JAMLIB</a>
-    	    library, made available so that JAM messagebases can be conveniently be accessed from Perl scripts.<p>
+    	    library, made available so that JAM messagebases can conveniently be accessed from Perl scripts.<p>
         
-		<ul>ftnpljam - FTN::JAM - Perl module for processing JAM messagebases. 
-		    <li><a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-jam.git">GIT</a> code repository for module</li>
-		    <li>Originally based on the public domain Perl <a href="http://bitbucket.org/johanbilling/jampm/">JAM.pm</a> module by Johan Billing</li>
-		</ul>
+	    <ul>ftnpljam - FTN::JAM - Perl module for processing JAM messagebases. 
+
+		<li><a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-jam.git">GIT</a> code repository for module</li>
+
+		<li>Archives are available in the ftn-jam section of the project
+		    <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+
+		<li>FTN::JAM at&nbsp;<a href="http://search.cpan.org/dist/FTN-JAM/">CPAN</a></li>
+
+		<li>Originally based on the public domain Perl <a href="http://bitbucket.org/johanbilling/jampm/">JAM.pm</a> module by Johan Billing</li>
+
+	    </ul>
 
 
         </div>
