Add files, git, & cpan links to ftnplsrf.html.

--- a/ftnplsrf.html
+++ b/ftnplsrf.html
@@ -50,9 +50,17 @@
 
         <h2>FTN::SRIF</h2>
         
-		<ul>ftnplsrf - FTN::SRIF - Perl module for processing SRIF files for file requests. 
-		    <li>(under development)</li>
-		</ul>
+	    <ul>ftnplsrf - FTN::SRIF - Perl module for processing SRIF type files for Fidonet/FTN processing. 
+
+		<li>Archives are available in the ftn-srif section of the project&nbsp;
+		    <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+
+		<li>Browse the GIT code&nbsp;
+		    <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-srif.git">repository</a>.</li>
+
+		<li>FTN::Log at&nbsp;<a href="http://search.cpan.org/dist/FTN-SRIF/">CPAN</a></li>
+
+	    </ul>
 
 
         </div>
