--- a/ftnpldb.html
+++ b/ftnpldb.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <title>FTN::Inbound Perl Module</title>
+     <title>FTN::Database Perl Module</title>
      <meta name="author" content="Robert James Clay">
      <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
      <meta http-equiv="KEYWORDS" CONTENT="Perl, Modules, Fidonet, FTN, BBS">
@@ -14,7 +14,7 @@
       <div class="Header">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
-          FTN::Inbound Perl Module
+          FTN::Database Perl Module
         </div>
       </div>
       <div class="subHeader">
@@ -31,7 +31,7 @@
         <span class="doNotDisplay">Navigation2:</span>
         <a href="./modules.html">Index</a> |
         <a href="./ftnpladx.html">Address</a> |
-        <a href="./ftnplinb.html">Inbound</a> |
+        <a href="./ftnpldb.html">Database</a> |
         <a href="./ftnpljam.html">JAM</a> |
         <a href="./ftnpllog.html">Log</a> |
         <a href="./ftnplnl.html">Nodelist</a> |
@@ -48,12 +48,31 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h2>FTN::Inbound</h2>
+        <h2>FTN::Database</h2>
 
-        	<ul>ftnplinb - FTN::Inbound - Perl module for processing FTN inbound directories. 
-		    <li>FTN::Inbound v0.01</li>
-		</ul>
+	    <ul><b>FTN::Database</b> (ftnpldb)
 
+		<li>Perl modules containing common related subroutines for Fidonet/FTN related
+		    processing using an SQL Database, plus associated scripts that both serve as examples
+		    of using the modules and also provide some basic functionality. The SQL
+		    database engine is one for which a DBD module exists, defaulting to SQLite.</li>
+
+		<li>Archives are available here in the ftn-database section of the project
+			<a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+
+		<li>Browse the GIT code
+		    <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-database.git">repository</a>.</li>
+
+		<li>FTN::Database at&nbsp;<a href="http://search.cpan.org/dist/FTN-Database/">CPAN</a>.</li>
+
+	    </ul>
+	    <ul><b>FTN::Database::Nodelist</b>
+
+		<li>Perl module containing common nodelist related subroutines for Fidonet/FTN Nodelist related
+		    processing on a Nodelist table in an SQL Database. Part of the FTN::Database distribution.</li>
+
+
+	    </ul>
 
 
         </div>
