--- a/ftnplnl.html
+++ b/ftnplnl.html
@@ -31,7 +31,7 @@
         <span class="doNotDisplay">Navigation2:</span>
         <a href="./modules.html">Index</a> |
         <a href="./ftnpladx.html">Address</a> |
-        <a href="./ftnplinb.html">Inbound</a> |
+        <a href="./ftnpldb.html">Database</a> |
         <a href="./ftnpljam.html">JAM</a> |
         <a href="./ftnpllog.html">Log</a> |
         <a href="./ftnplnl.html">Nodelist</a> |
@@ -62,7 +62,7 @@
 
 		<li>Perl module containing common nodelist related subroutines for Fidonet/FTN Nodelist related
 		    processing on a Nodelist table in an SQL Database. The SQL database engine is one for which
-		    a DBD module exists, defaulting to SQLite. Part of the FTN::Database distribution.</li>
+		    a DBD module exists, defaulting to SQLite. Part of the <a href="./ftnpldb.html">FTN::Database</a> distribution.</li>
 
 		<li>Archives are available here in the ftn-database section of the project
 			<a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
