--- a/modules.html
+++ b/modules.html
@@ -31,7 +31,7 @@
         <span class="doNotDisplay">Navigation2:</span>
         <a href="./modules.html">Index</a> |
         <a href="./ftnpladx.html">Address</a> |
-        <a href="./ftnpldb.html">Inbound</a> |
+        <a href="./ftnpldb.html">Database</a> |
         <a href="./ftnpljam.html">JAM</a> |
         <a href="./ftnpllog.html">Log</a> |
         <a href="./ftnplnl.html">Nodelist</a> |
@@ -53,7 +53,7 @@
 	    <ul>
 	    	<li><a href="ftnpladx.html">ftnpladx</a> - FTN::Address - Perl module for processing FTN Addresses.  </li>
 
-        	<li><a href="ftnpldb.html">ftnpldb</a> - FTN::Database - Perl module FTN related processing using an SQL Database. </li>
+        	<li><a href="ftnpldb.html">ftnpldb</a> - FTN::Database - Perl module and associated scripts for FTN related processing using an SQL Database. </li>
 
         	<li><a href="ftnpljam.html">ftnpljam</a> - FTN::JAM - Perl module for FTN JAM Messagebase processing. </li>
 		    
