--- a/ftnpladx.html
+++ b/ftnpladx.html
@@ -31,7 +31,7 @@
         <span class="doNotDisplay">Navigation2:</span>
         <a href="./modules.html">Index</a> |
         <a href="./ftnpladx.html">Address</a> |
-        <a href="./ftnplinb.html">Inbound</a> |
+        <a href="./ftnpldb.html">Database</a> |
         <a href="./ftnpljam.html">JAM</a> |
         <a href="./ftnpllog.html">Log</a> |
         <a href="./ftnplnl.html">Nodelist</a> |
