Initial adaption of ftnpl Sourceforge site to GitHub.

--- a/applications.html
+++ b/applications.html
@@ -19,13 +19,12 @@
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
-        <a href="./index.html">Home</a> |
-        <a href="./modules.html">Modules</a> |
-        <a href="./scripts.html">Scripts</a> |
-        <a href="./applications.html">Apps</a> |
-        <a href="./links.html">Links</a> |
-        <a href="./information.html">Info</a> |
-        <a href="./contact.html">Contact Us</a> 
+        <a href="index.html">Home</a> |
+        <a href="modules.html">Modules</a> |
+        <a href="scripts.html">Scripts</a> |
+        <a href="applications.html">Apps</a> |
+        <a href="links.html">Links</a> |
+        <a href="information.html">Info</a>
       </div>
     </div>
 
@@ -42,28 +41,28 @@
           <li>An Fidonet - Internet gateway application which has an extensive set of Perl scripts associated with it.</li>
           <li>Fidogate (<a href="http://fidogate.sf.net">fidogate.sf.net</a>) project at SourceForge</li>
           <li>A Russian version of the Fidogate (<a href="http://rusfidogate.sf.net">rusfidogate.sf.net</A>) project at SourceForge</li>
-	</ul>
-  
+    </ul>
+
         <ul>HPT (<a href="http://husky.sourceforge.net/hpt.html">husky.sourceforge.net/hpt.html</A>)
           <li>Highly Portable Tosser;  part of the&nbsp;<a href="http://husky.sourceforge.net">Husky</A>&nbsp;project.</li>
           <li>Has an extensive set of Perl hooks built into it.</li>
-	</ul>
-	 
+    </ul>
+
         <ul>BinkD
           <li>BinkD is Fidonet mailer which is designed to operate over TCP/IP netowrks and now has an extensive set of Perl hooks built into it.</li>
           <li>A good information site for BinkD is at&nbsp;<a href="http://binkd.grumbler.org">binkd.grumbler.org</A></li>
-	</ul>
-	 
+    </ul>
+
          <ul>BBBS (<a href="http://www.bbbs.net">www.bbbs.net</a>)
           <li>This is a BBS program that is available for many different platforms, 
              and while it has it's own scripting language it can also be set up to
              use Perl.</li>
-	 </ul>
+     </ul>
 
          <ul>SynchroNet (<a href="http://www.synchro.net">www.synchro.net</a>)
           <li>SynchroNet (SBBS) is a BBS program that is available for mulitple platforms, and while it has it's own scripting language (Javascript or Baja)
            it can also be set up to use Perl.</li>
-	 </ul>
+     </ul>
 
         </dl>
 
@@ -71,19 +70,13 @@
       </div>
 
     </div>
-    
+
     <div id="footer">
-	<table width="100%">
-	 <tr><td>
-
-	 <a href="http://sourceforge.net">
-	 <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
-
-	 </td><td align="right">
-	  <font size="-2">Copyright &copy;2010 Robert James Clay</font>
-	 </td></tr)
-	</table>
+    <table width="100%">
+     <tr>><td align="right">
+      <font size="-2">Copyright &copy;2011 Robert James Clay</font>
+     </td></tr)
+    </table>
     </div>
 
   </body>
