--- a/information.html
+++ b/information.html
@@ -19,13 +19,12 @@
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
-        <a href="./index.html">Home</a> |
-        <a href="./modules.html">Modules</a> |
-        <a href="./scripts.html">Scripts</a> |
-        <a href="./applications.html">Apps</a> |
-        <a href="./links.html">Links</a> |
-        <a href="./information.html">Info</a> |
-        <a href="./contact.html">Contact Us</a> 
+        <a href="index.html">Home</a> |
+        <a href="modules.html">Modules</a> |
+        <a href="scripts.html">Scripts</a> |
+        <a href="applications.html">Apps</a> |
+        <a href="links.html">Links</a> |
+        <a href="information.html">Info</a>
       </div>
     </div>
 
@@ -42,7 +41,7 @@
 				<p><a href="http://www.fidonet.org/inet92_Randy_Bush.txt">FidoNet: Technology, Use, Tools, and History</a>, By Randy Bush	</p>    
 
 				<p>  &#34;Fido&#34;, &#34;<a href="http://www.fidonet.org">Fidonet</a>&#34;,
-				and the dog-with-diskette are U.S. registered trademarks of Tom Jennings, tomj@wps.com. </p>
+				and the dog-with-diskette were U.S. registered trademarks of Tom Jennings, tomj@wps.com. </p>
 			</div>
 
 	      <div class="oneThird">
@@ -86,17 +85,11 @@
     </div>
     
     <div id="footer">
-		<table width="100%">
-		<tr><td>
-
-		<a href="http://sourceforge.net">
-		<img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
-		width="88" height="31" border="0" alt="SourceForge Logo"/></a>
-
-		</td><td align="right">
-		<font size="-2">Copyright &copy; 2006 Robert James Clay</font>
-		</td></tr>
-		</table>
+        <table width="100%">
+        <tr><td align="right">
+            <font size="-2">Copyright &copy; 2011 Robert James Clay</font>
+        </td></tr>
+        </table>
     </div>
 
   </body>
