--- a/ftnpljam.html
+++ b/ftnpljam.html
@@ -19,28 +19,27 @@
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation1:</span>
-        <a href="./index.html">Home</a> |
-        <a href="./modules.html">Modules</a> |
-        <a href="./scripts.html">Scripts</a> |
-        <a href="./applications.html">Apps</a> |
-        <a href="./links.html">Links</a> |
-        <a href="./information.html">Info</a> |
-        <a href="./contact.html">Contact Us</a> 
+        <a href="index.html">Home</a> |
+        <a href="modules.html">Modules</a> |
+        <a href="scripts.html">Scripts</a> |
+        <a href="applications.html">Apps</a> |
+        <a href="links.html">Links</a> |
+        <a href="information.html">Info</a>
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation2:</span>
-        <a href="./modules.html">Index</a> |
-        <a href="./ftnpladx.html">Address</a> |
-        <a href="./ftnpldb.html">Database</a> |
-        <a href="./ftnpljam.html">JAM</a> |
-        <a href="./ftnpllog.html">Log</a> |
-        <a href="./ftnplnl.html">Nodelist</a> |
-        <a href="./ftnplout.html">Outbound</a> |
-        <a href="./ftnplpkt.html">Packet</a> |
-        <a href="./ftnplsrf.html">SRIF</a> |
-        <a href="./ftnpltic.html">Tick</a> |
-        <a href="./ftnplutl.html">Utility</a> | 
-        <a href="./ftnmodpl.html">Other</a> 
+        <a href="modules.html">Index</a> |
+        <a href="ftnpladx.html">Address</a> |
+        <a href="ftnpldb.html">Database</a> |
+        <a href="ftnpljam.html">JAM</a> |
+        <a href="ftnpllog.html">Log</a> |
+        <a href="ftnplnl.html">Nodelist</a> |
+        <a href="ftnplout.html">Outbound</a> |
+        <a href="ftnplpkt.html">Packet</a> |
+        <a href="ftnplsrf.html">SRIF</a> |
+        <a href="ftnpltic.html">Tick</a> |
+        <a href="ftnplutl.html">Utility</a> | 
+        <a href="ftnmodpl.html">Other</a> 
       </div>
     </div>
 
@@ -50,39 +49,33 @@
 
         <p>JAM is a popular messagebase format for storeing Fidonet/FTN messages originally devised by Joaquim Homrighausen,
            Andrew Milner, Mats Mirch, and Mats Wallin.  This is a Perl implementation of the <a href="http://jamlib.sourceforge.net">JAMLIB</a>
-    	    library, made available so that JAM messagebases can conveniently be accessed from Perl scripts.<p>
-        
-	    <ul>ftnpljam - FTN::JAM - Perl module for processing JAM messagebases. 
+            library, made available so that JAM messagebases can conveniently be accessed from Perl scripts.<p>
 
-		<li><a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-jam.git">GIT</a> code repository for module</li>
+        <ul>ftnpljam - FTN::JAM - Perl module for processing JAM messagebases. 
 
-		<li>Archives are available in the ftn-jam section of the project
-		    <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+        <li><a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-jam.git">GIT</a> code repository for module</li>
 
-		<li>FTN::JAM at&nbsp;<a href="http://search.cpan.org/dist/FTN-JAM/">CPAN</a></li>
+        <li>Archives are available in the ftn-jam section of the project
+            <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
 
-		<li>Originally based on the public domain Perl <a href="http://bitbucket.org/johanbilling/jampm/">JAM.pm</a> module by Johan Billing</li>
+        <li>FTN::JAM at&nbsp;<a href="http://search.cpan.org/dist/FTN-JAM/">CPAN</a></li>
 
-	    </ul>
+        <li>Originally based on the public domain Perl <a href="http://bitbucket.org/johanbilling/jampm/">JAM.pm</a> module by Johan Billing</li>
+
+        </ul>
 
 
         </div>
       </div>
 
     </div>
-    
+
     <div id="footer">
-	<table width="100%">
-	 <tr><td>
-
-	 <a href="http://sourceforge.net">
-	 <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
-
-	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2010 Robert James Clay</font>
-	 </td></tr)
-	</table>
+    <table width="100%">
+     <tr><td align="right">
+      <font size="-2">Copyright &copy; 2010 Robert James Clay</font>
+     </td></tr)
+    </table>
     </div>
 
   </body>
