--- a/ftnplnl.html
+++ b/ftnplnl.html
@@ -19,28 +19,27 @@
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation1:</span>
-        <a href="./index.html">Home</a> |
-        <a href="./modules.html">Modules</a> |
-        <a href="./scripts.html">Scripts</a> |
-        <a href="./applications.html">Apps</a> |
-        <a href="./links.html">Links</a> |
-        <a href="./information.html">Info</a> |
-        <a href="./contact.html">Contact Us</a> 
+        <a href="index.html">Home</a> |
+        <a href="modules.html">Modules</a> |
+        <a href="scripts.html">Scripts</a> |
+        <a href="applications.html">Apps</a> |
+        <a href="links.html">Links</a> |
+        <a href="information.html">Info</a>
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation2:</span>
-        <a href="./modules.html">Index</a> |
-        <a href="./ftnpladx.html">Address</a> |
-        <a href="./ftnpldb.html">Database</a> |
-        <a href="./ftnpljam.html">JAM</a> |
-        <a href="./ftnpllog.html">Log</a> |
-        <a href="./ftnplnl.html">Nodelist</a> |
-        <a href="./ftnplout.html">Outbound</a> |
-        <a href="./ftnplpkt.html">Packet</a> |
-        <a href="./ftnplsrf.html">SRIF</a> |
-        <a href="./ftnpltic.html">Tick</a> |
-        <a href="./ftnplutl.html">Utility</a> | 
-        <a href="./ftnmodpl.html">Other</a> 
+        <a href="modules.html">Index</a> |
+        <a href="ftnpladx.html">Address</a> |
+        <a href="ftnpldb.html">Database</a> |
+        <a href="ftnpljam.html">JAM</a> |
+        <a href="ftnpllog.html">Log</a> |
+        <a href="ftnplnl.html">Nodelist</a> |
+        <a href="ftnplout.html">Outbound</a> |
+        <a href="ftnplpkt.html">Packet</a> |
+        <a href="ftnplsrf.html">SRIF</a> |
+        <a href="ftnpltic.html">Tick</a> |
+        <a href="ftnplutl.html">Utility</a> | 
+        <a href="ftnmodpl.html">Other</a> 
       </div>
     </div>
 
@@ -49,48 +48,42 @@
         <div class="fullWidth">
 
         <p>Fidonet/FTN Nodelist related Perl Modules</p>
-		    
-	    <ul><b>FTN::Nodelist</b> <!-- - ftnplnl -->
-		<li>Object Oriented Perl module for accessing FTN nodelists, by Serguel Trouchelle.</li>  
-		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.07/">FTN-Nodelist-1.07</a> - FTN::Nodelist v1.07 (2007/02/28)</li>
-    		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.06/">FTN-Nodelist-1.06</a> - FTN::Nodelist v1.06 (2007/02/04)</li>
-    		<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/">FTN-Nodelist-1.05</a> - FTN::Nodelist v1.05 (2005/09/29)</li>
-        	<li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle (part of FTN::Nodelist) </li>
-	    </ul>
 
-	    <ul><b>FTN::Database::Nodelist</b>
+        <ul><b>FTN::Nodelist</b> <!-- - ftnplnl -->
+            <li>Object Oriented Perl module for accessing FTN nodelists, by Serguel Trouchelle.</li>  
+            <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.07/">FTN-Nodelist-1.07</a> - FTN::Nodelist v1.07 (2007/02/28)</li>
+            <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.06/">FTN-Nodelist-1.06</a> - FTN::Nodelist v1.06 (2007/02/04)</li>
+            <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/">FTN-Nodelist-1.05</a> - FTN::Nodelist v1.05 (2005/09/29)</li>
+            <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle (part of FTN::Nodelist) </li>
+        </ul>
 
-		<li>Perl module containing common nodelist related subroutines for Fidonet/FTN Nodelist related
-		    processing on a Nodelist table in an SQL Database. The SQL database engine is one for which
-		    a DBD module exists, defaulting to SQLite. Part of the <a href="./ftnpldb.html">FTN::Database</a> distribution.</li>
+        <ul><b>FTN::Database::Nodelist</b>
 
-		<li>Archives are available here in the ftn-database section of the project
-			<a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+        <li>Perl module containing common nodelist related subroutines for Fidonet/FTN Nodelist related
+            processing on a Nodelist table in an SQL Database. The SQL database engine is one for which
+            a DBD module exists, defaulting to SQLite. Part of the <a href="./ftnpldb.html">FTN::Database</a> distribution.</li>
 
-		<li>Browse the GIT code&nbsp;
-		    <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-database.git">repository</a>.</li>
+        <li>Archives are available here in the ftn-database section of the project
+            <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
 
-		<li>FTN::Database at&nbsp;<a href="http://search.cpan.org/dist/FTN-Database/">CPAN</a>.</li>
+        <li>Browse the GIT code&nbsp;
+            <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-database.git">repository</a>.</li>
 
-	    </ul>
+        <li>FTN::Database at&nbsp;<a href="http://search.cpan.org/dist/FTN-Database/">CPAN</a>.</li>
+
+        </ul>
 
         </div>
       </div>
 
     </div>
-    
+
     <div id="footer">
-	<table width="100%">
-	 <tr><td>
-
-	 <a href="http://sourceforge.net">
-	 <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
-
-	 </td><td align="right">
-	  <font size="-2">Copyright &copy;2010 Robert James Clay</font>
-	 </td></tr)
-	</table>
+    <table width="100%">
+     <tr><td align="right">
+      <font size="-2">Copyright &copy;2011 Robert James Clay</font>
+     </td></tr)
+    </table>
     </div>
 
   </body>
