--- a/ftnplsrf.html
+++ b/ftnplsrf.html
@@ -19,28 +19,27 @@
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation1:</span>
-        <a href="./index.html">Home</a> |
-        <a href="./modules.html">Modules</a> |
-        <a href="./scripts.html">Scripts</a> |
-        <a href="./applications.html">Apps</a> |
-        <a href="./links.html">Links</a> |
-        <a href="./information.html">Info</a> |
-        <a href="./contact.html">Contact Us</a> 
+        <a href="index.html">Home</a> |
+        <a href="modules.html">Modules</a> |
+        <a href="scripts.html">Scripts</a> |
+        <a href="applications.html">Apps</a> |
+        <a href="links.html">Links</a> |
+        <a href="information.html">Info</a>
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation2:</span>
-        <a href="./modules.html">Index</a> |
-        <a href="./ftnpladx.html">Address</a> |
-        <a href="./ftnpldb.html">Database</a> |
-        <a href="./ftnpljam.html">JAM</a> |
-        <a href="./ftnpllog.html">Log</a> |
-        <a href="./ftnplnl.html">Nodelist</a> |
-        <a href="./ftnplout.html">Outbound</a> |
-        <a href="./ftnplpkt.html">Packet</a> |
-        <a href="./ftnplsrf.html">SRIF</a> |
-        <a href="./ftnpltic.html">Tick</a> |
-        <a href="./ftnplutl.html">Utility</a> | 
-        <a href="./ftnmodpl.html">Other</a> 
+        <a href="modules.html">Index</a> |
+        <a href="ftnpladx.html">Address</a> |
+        <a href="ftnpldb.html">Database</a> |
+        <a href="ftnpljam.html">JAM</a> |
+        <a href="ftnpllog.html">Log</a> |
+        <a href="ftnplnl.html">Nodelist</a> |
+        <a href="ftnplout.html">Outbound</a> |
+        <a href="ftnplpkt.html">Packet</a> |
+        <a href="ftnplsrf.html">SRIF</a> |
+        <a href="ftnpltic.html">Tick</a> |
+        <a href="ftnplutl.html">Utility</a> | 
+        <a href="ftnmodpl.html">Other</a> 
       </div>
     </div>
 
@@ -49,37 +48,31 @@
         <div class="fullWidth">
 
         <h2>FTN::SRIF</h2>
-        
-	    <ul>ftnplsrf - FTN::SRIF - Perl module for processing SRIF type files for Fidonet/FTN processing. 
 
-		<li>Archives are available in the ftn-srif section of the project&nbsp;
-		    <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
+        <ul>ftnplsrf - FTN::SRIF - Perl module for processing SRIF type files for Fidonet/FTN processing. 
 
-		<li>Browse the GIT code&nbsp;
-		    <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-srif.git">repository</a>.</li>
+            <li>Archives are available in the ftn-srif section of the project&nbsp;
+                <a href="http://sourceforge.net/projects/ftnpl/files/">files</a>.</li>
 
-		<li>FTN::Log at&nbsp;<a href="http://search.cpan.org/dist/FTN-SRIF/">CPAN</a></li>
+            <li>Browse the GIT code&nbsp;
+                <a href="http://ftnpl.git.sourceforge.net/git/gitweb.cgi?p=ftnpl/ftn-srif.git">repository</a>.</li>
 
-	    </ul>
+        <li>FTN::Log at&nbsp;<a href="http://search.cpan.org/dist/FTN-SRIF/">CPAN</a></li>
+
+        </ul>
 
 
         </div>
       </div>
 
     </div>
-    
+
     <div id="footer">
-	<table width="100%">
-	 <tr><td>
-
-	 <a href="http://sourceforge.net">
-	 <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
-
-	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2010 Robert James Clay</font>
-	 </td></tr)
-	</table>
+    <table width="100%">
+     <tr><td align="right">
+      <font size="-2">Copyright &copy; 2011 Robert James Clay</font>
+     </td></tr>
+    </table>
     </div>
 
   </body>
