--- a/links.html
+++ b/links.html
@@ -19,13 +19,12 @@
       </div>
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
-        <a href="./index.html">Home</a> |
-        <a href="./modules.html">Modules</a> |
-        <a href="./scripts.html">Scripts</a> |
-        <a href="./applications.html">Apps</a> |
-        <a href="./links.html">Links</a> |
-        <a href="./information.html">Info</a> |
-        <a href="./contact.html">Contact Us</a> 
+        <a href="index.html">Home</a> |
+        <a href="modules.html">Modules</a> |
+        <a href="scripts.html">Scripts</a> |
+        <a href="applications.html">Apps</a> |
+        <a href="links.html">Links</a> |
+        <a href="information.html">Info</a>
       </div>
     </div>
 
@@ -59,19 +58,13 @@
       </div>
 
     </div>
-    
+
     <div id="footer">
-	<table width="100%">
-	 <tr><td>
-
-	 <a href="http://sourceforge.net">
-	 <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
-
-	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
-	 </td></tr)
-	</table>
+    <table width="100%">
+     <tr><td align="right">
+      <font size="-2">Copyright &copy; 2011 Robert James Clay</font>
+     </td></tr)
+    </table>
     </div>
 
   </body>
